# Computer-Science

2023/AED2/linkedAllocation/: Makefile
2023/AED2/linkedAllocation/include/: GraphicInterface.h  ListAllocatedBlocks.h  ListAvaliableBlocks.h  MemoryManager.h  Node.h
2023/AED2/linkedAllocation/programs/: main.c
2023/AED2/linkedAllocation/src/: GraphicInterface.c  ListAllocatedBlocks.c  ListAvaliableBlocks.c  MemoryManager.c  Node.c
2023/AED2/recursion/include/: GeometricForms.h
2023/AED2/recursion/programs/: main.c
2023/AED2/recursion/src/: GeometricForms.c
2023/AED2/recursividade/: Makefile
2023/AED2/recursividade/include/: GeometricForms.h
2023/CN/: inversionJordan.c  linearSystemsJacobi.c
2023/LFA/AFD/: afd.py
2023/PP/circularList/: CMakeLists.txt  CircularList.cpp  CircularList.h  Node.cpp  Node.h  Roulette.cpp  Roulette.h  main.cpp
2023/PP/circunference2d/: CMakeLists.txt  Circunference.cpp  Point.cpp  Point.h  main.cpp
2023/PP/circunferencia2d/: CMakeLists.txt  Circunference.h  main.cpp
2023/PP/complexNumbers/: main.cpp
2023/PP/dinamicArray/: main.cpp
2023/PP/equal/: CMakeLists.txt  Equals.cpp  Equals.h  main.cpp
2023/PP/intOps/: main.cpp
2023/PP/matrizTemplate/: main.cpp
2023/PP/simpleListDeque/: CMakeLists.txt  main.cpp
2023/PP/simpleListDeque/Deque/include/: Deque.h  Node.h
2023/PP/simpleListDeque/Deque/src/: .Deque.cpp.swp  Deque.cpp  Node.cpp
